# fp-audio-service

./: .dockerignore  .gitignore  Dockerfile  app.py  docker-compose.yml  generate_grpc.sh  main.py  requirements.txt  start_audio_service.sh
checkpoints/: best_model.pth  class_names.json  training_history.json
exported_models/: model.onnx
lib/common/: pyproject.toml
lib/common/common.egg-info/: PKG-INFO  requires.txt
lib/common/src/audio/: __init__.py  audio_utils.py
lib/common/src/preprocessing/: __init__.py  preprocessing.py
lib/kitchen20-pytorch/: README.md  pyproject.toml
lib/kitchen20-pytorch/kitchen20_pytorch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lib/kitchen20-pytorch/src/data/: augmentation.py  dataset.py
lib/kitchen20-pytorch/src/inference/: __init__.py  train_model.py
lib/kitchen20-pytorch/src/models/: cnn_model.py  export_model.py
lib/kitchen20-pytorch/src/training/: train.py
src/: audio_service.py
src/grpc_generated/: audio_service_pb2.py  audio_service_pb2_grpc.py
src/predictor/: predict.py
