[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common"
version = "0.1.0"
description = "Common utilities for audio processing with PyTorch 2.7.0"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
]

[tool.setuptools]
package-dir = {"common" = "src"}
packages = ["common"]